--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div id="about" class="d-flex white-text pt-5">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-6 rgba-black-strong px-5 mb-5">
+                <div class="col-sm-6 rgba-black-strong px-5 mb-5">
                     <p class="my-5 myriad-light" style="font-size: 25px;">Living Flames 24-7 is a non-denominational gathering of passionate worshippers of God. Kingdom Warriors who are sold out to Jesus and live a lifestyle of Worship.</p>
                     <p class="my-5 myriad-light" style="font-size: 25px;">Our passion is to have deep and intimate, yet powerful relationship with Our God. Living in the fullness of what it means to be a Disciple of Christ, And impacting the world around us with His love.</p>
                 </div>
